src/test/ui/allocator/function-allocator.stderr
error: allocators must be statics
  --> $DIR/function-allocator.rs:2:1
   |
LL | fn foo() {} //~ ERROR: allocators must be statics
   | ^^^^^^^^^^^

error: aborting due to previous error

